fix behaviour of subscribe window on iphone screen

--- a/css/style.css
+++ b/css/style.css
@@ -3247,7 +3247,7 @@ a[data-icon] {
 }
 .subscribe-window__wrapper {
     display: none;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
@@ -3261,9 +3261,9 @@ a[data-icon] {
     position: fixed;
     width: 358px;
     height: 588px;
-    top: 50%;
+    bottom: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 50%);
     display: none;
     flex-direction: column;
     justify-content: flex-start;
